[package]
name = "rust_dist_network"
version = "0.1.0"
edition = "2024"

[[bin]]
edition="2024"
name="rust_dist_network"
path="src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.2"